<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_Primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_c1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/l_lay_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="20pt"
            android:layout_marginTop="20pt"


            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/logo"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/onboarding_step_2_screen_title"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"

                >

            </TextView>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="99dp"
            android:layout_height="96dp"

            android:layout_marginTop="14pt"
            android:layout_marginEnd="20pt"

            android:background="@drawable/logo_tick"
            android:foregroundGravity="center"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription">

        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_card"
            android:layout_width="0pt"
            android:layout_height="0pt"

            android:layout_marginStart="20pt"
            android:layout_marginTop="33pt"
            android:layout_marginEnd="12pt"
            android:layout_marginBottom="15pt"

            android:background="@drawable/onboarding_card_1"
            android:clipChildren="false"
            android:clipToOutline="false"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_lay_1"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="UnusedAttribute">


            <LinearLayout
                android:layout_width="352dp"
                android:layout_height="match_parent"

                android:layout_marginTop="150dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:paddingStart="0dp"
                    android:text="@string/onboarding_step_2_label_special"
                    tools:ignore="RtlSymmetry">

                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_2_placeholder_special"
                    android:autofillHints=""
                    tools:ignore="LabelFor,RtlSymmetry,TextFields">

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:paddingStart="0dp"
                    android:text="@string/onboarding_step_2_label_year"
                    tools:ignore="RtlSymmetry">

                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_2_placeholder_2024"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields">

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:paddingStart="0dp"
                    android:text="@string/onboarding_step_2_label_semester"
                    tools:ignore="RtlSymmetry">

                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_2_placeholder_year"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:paddingStart="0dp"
                    android:text="@string/onboarding_step_2_label_group"
                    tools:ignore="RtlSymmetry">

                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_2_placeholder_we02"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields">


                </EditText>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="261dp"
            android:layout_height="261dp"

            android:layout_marginTop="-86dp"

            android:background="@drawable/signup_image"
            android:foregroundGravity="top"

            app:layout_constraintLeft_toLeftOf="@id/main_card"
            app:layout_constraintRight_toRightOf="@id/main_card"
            app:layout_constraintTop_toTopOf="@id/main_card"
            tools:ignore="ContentDescription">

        </ImageView>
        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/next_btn"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
