<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_Primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_c1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/l_lay_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="20pt"
            android:layout_marginTop="20pt"


            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/logo"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/onboarding_step_1_screen_title"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"

                >

            </TextView>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="99dp"
            android:layout_height="96dp"

            android:layout_marginTop="14pt"
            android:layout_marginEnd="20pt"

            android:background="@drawable/logo_tick"
            android:foregroundGravity="center"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription">

        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0pt"
            android:layout_height="0pt"

            android:layout_marginTop="33pt"
            android:layout_marginStart="20pt"
            android:layout_marginEnd="12pt"
            android:layout_marginBottom="15pt"

            app:layout_constraintTop_toBottomOf="@id/l_lay_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:background="@drawable/onboarding_card_1"
            >


            <ImageView
                android:id="@+id/onboarding_image"
                android:layout_width="261dp"
                android:layout_height="261dp"

                android:layout_marginTop="12pt"

                android:background="@drawable/onboarding_signup_1"
                android:foregroundGravity="top"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onboarding_image"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_1_placeholder_email"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,RtlSymmetry,TextFields">

                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_1_placeholder_name"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,RtlSymmetry,TextFields">

                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/onboarding_edit_text_1"

                    android:paddingStart="13dp"
                    android:text="@string/onboarding_step_1_placeholder_password"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,RtlSymmetry,TextFields">

                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:text="@string/onboarding_step_1_already_have"

                    android:paddingStart="27dp"

                    android:fontFamily="@font/inter_font"
                    tools:ignore="RtlSymmetry">

                </TextView>




            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/next_btn"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="">
        </ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
